<resources>
    <string name="app_name">Информационное обеспечение</string>
    <string name="hotlist" />
    <string name="bell">bell</string>
    <string name="fio">ФИО</string>
    <string name="birthday">Дата рождения</string>
    <string name="innerBaseSearch">Поиск по внутренней базе</string>
    <string name="OuterBaseSearch">Поиск по внешней базе</string>
    <string name="Authorization">Авторизация</string>
    <string name="UserName">Имя пользователя</string>
    <string name="Password">Пароль</string>
    <string name="Enter">Вход</string>
    <string name="CurrentSessionInfo">Информация о текущей сессии:</string>
    <string name="UserLogin">Логин пользователя:</string>
    <string name="Login">Логин</string>
    <string name="deviceId">Идентификатор устройства:</string>
    <string name="Id">Идентификатор</string>
    <string name="InfoError">Отправить отчёт об ошибках</string>
    <string name="AddBranch">Добавить ветку</string>
    <string name="Name">Название</string>
    <string name="LinkedDistricts">Связанные районы:</string>
    <string name="Add">Добавить</string>
    <string name="LinkedServices">Связанные службы:</string>
    <string name="AddDataObject">Добавить объект данных</string>
    <string name="Name">Название</string>
    <string name="ChooseImage">Выбрать изображение</string>
    <string name="LocationBranch">Ветка для размещения:</string>
    <string name="fillForm">Заполнить форму</string>
    <string name="add">Добавить</string>
    <string name="AddForm">Добавить форму</string>
    <string name="Name">Название</string>
    <string name="PersonInfo">Данные о человеке:</string>
    <string name="HumanFormWarning">К форме будут добавлены обязательные реквизиты: ФИО, дата рождения</string>
    <string name="AddRecord">Добавить реквизит</string>
    <string name="add">Добавить</string>
    <string name="addEvent">Добавить мероприятие</string>
    <string name="name">Название</string>
    <string name="startDate">Дата начала</string>
    <string name="startTime">Время начала</string>
    <string name="endDate">Дата окончания</string>
    <string name="endTime">Вреия окончания</string>
    <string name="description">Описание</string>
    <string name="linkedServices">Связанные службы:</string>
    <string name="linkedDistricts">Связанные районы:</string>
    <string name="add">Добавить</string>
    <string name="addSpace">Добавить</string>
    <string name="name">Название</string>
    <string name="add">Добавить</string>
    <string name="addUser">Добавить пользователя</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="fio">ФИО</string>
    <string name="email">Электронная почта</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="UserBlocked">Пользователь заблокирован:</string>
    <string name="add">Добавить</string>
    <string name="name">Название</string>
    <string name="name">Название</string>
    <string name="highBranch">Старшая ветка</string>
    <string name="form">Форма</string>
    <string name="creator">Автор</string>
    <string name="date">Дата</string>
    <string name="fillForm">Заполнить форму</string>
    <string name="name">Название</string>
    <string name="date">Дата</string>
    <string name="creator">Автор</string>
    <string name="fieldName">Название поля:</string>
    <string name="fieldValue">Значение поля</string>
    <string name="name">Название</string>
    <string name="branch">Ветка</string>
    <string name="creator">Автор</string>
    <string name="date">Дата</string>
    <string name="name">Название</string>
    <string name="creator">Автор</string>
    <string name="date">Дата</string>
    <string name="name">Название</string>
    <string name="creator">Автор</string>
    <string name="date">Дата</string>
    <string name="name">Название</string>
    <string name="creator">Автор</string>
    <string name="date">Дата</string>
    <string name="name">Название</string>
    <string name="creator">Автор</string>
    <string name="date">Дата</string>
    <string name="name">Название</string>
    <string name="creator">Автор</string>
    <string name="startTime">Время начала</string>
    <string name="timeEnd">Время окончания</string>
    <string name="name">Название</string>
    <string name="name">Название</string>
    <string name="creator">Автор</string>
    <string name="date">Дата</string>
    <string name="login">Логин</string>
    <string name="fio">ФИО</string>
    <string name="district">Район</string>
    <string name="service">Служба</string>
    <string name="creator">Автор</string>
    <string name="addDate">Дата добавления</string>
</resources>
