<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/loginTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fio"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/districtTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/serviceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/service"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/creatorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/creator"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/createDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/addDate"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>