<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_tablet" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/creatorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="end"
        android:text="@string/creator"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="end"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp" />

</androidx.cardview.widget.CardView>