<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LoginLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginTIL"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/Authorization"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:paddingHorizontal="100sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserName"
            android:inputType="textNoSuggestions"
            android:textSize="30sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTIL"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:paddingHorizontal="100sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="30sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:padding="20sp"
        android:text="@string/Enter"
        android:textSize="35sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingChooseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_administrative_options"
        app:fabCustomSize="60dp"
        app:maxImageSize="40dp" />

</RelativeLayout>